z-index fix for node selection

--- a/src/plugins/FlowEditor/NodeTemplate.scss
+++ b/src/plugins/FlowEditor/NodeTemplate.scss
@@ -21,6 +21,7 @@
             background-color: #9a9a9a;
           }
           .solid-select-list{
+            display: block;
             background-color: #4d4d4d;
             max-height: 150px;
             padding: 0;
